--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -3,7 +3,7 @@ body{
 }
 .students{
     
-    width: 20%;
+    width: 20rem;
     border: 1px solid teal;
     margin: auto;
     border-radius: 10%;
@@ -11,7 +11,8 @@ body{
     color: white;
     font-weight: bold;
 }
-.card{
+.cardgroup{
+    width: 12em;
     text-align: center;
     border-radius: 10px;
 }
@@ -19,6 +20,7 @@ body{
     border: 1px solid teal;
     border-radius: 10px;
     box-shadow: 3px -3px 16px teal;
+
 }
 
 .buttonspills{
@@ -31,7 +33,5 @@ body{
 }
 .buttonspills:hover{
     color: white;
-    
-   
-
 }
+
