--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -7,3 +7,6 @@ body{
 
     background-image: linear-gradient(to right, rgba(83,138,214,1) , rgba(134,231,214,1));
 }
+div{
+    border: dotted 1px black;
+}
