pages courses, paga all class, map and routes all class, map and route one class, css updates

--- a/src/front/styles/card_for_classes.css
+++ b/src/front/styles/card_for_classes.css
@@ -3,4 +3,11 @@
     width: 15rem;
     border-radius: 10px;
     border: 1px solid teal;
+    transition: transform .2s;
 }
+.card:hover{
+transform: scale(1.1 );
+}
+
+
+  
