--- a/src/front/styles/modalForLogin.css
+++ b/src/front/styles/modalForLogin.css
@@ -12,21 +12,20 @@
 }
 .modal.is_open{
     display: flex;
-} 
- .modal-container{
+}
+.modal-container{
     position: relative;
-    padding: 1rem; 
-     min-width: 320px;
+    padding: 1rem;
+    min-width: 320px;
     max-width: 480px;
     min-height: 200px;
-    max-height: 600px; 
-     overflow-y: auto;
+    max-height: 600px;
     background-color: #fff;
     border-radius: 10px;
 
 }
-.modalclose{
+.modal-close{
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: 0rem;
+    right: 0rem;
 }
