--- a/src/front/styles/modalForLogin.css
+++ b/src/front/styles/modalForLogin.css
@@ -12,20 +12,20 @@
 }
 .modal.is_open{
     display: flex;
-}
-.modal-container{
+} 
+ .modal-container{
     position: relative;
-    padding: 1rem;
-    min-width: 320px;
+    padding: 1rem; 
+     min-width: 320px;
     max-width: 480px;
     min-height: 200px;
-    max-height: 600px;
+    max-height: 600px; 
     background-color: #fff;
     border-radius: 10px;
 
 }
-.modal-close{
+.modalclose{
     position: absolute;
-    top: 0rem;
-    right: 0rem;
+    top: 1rem;
+    right: 1rem;
 }
